deploy/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: discordbot
  name: discordbot
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: discordbot
  sessionAffinity: None
  type: ClusterIP
